--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,22 @@ html {
     height: 100%;
 }
 
+.off-css {
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    height: auto;
+    /* margin-top: 1%; */
+}
+
+.off-css>button {
+    box-sizing: border-box;
+    padding: 5px;
+    border: none;
+    /* border-radius: 5px; */
+}
+
 .container {
     display: flex;
     width: 100%;
